# squiggle-core

./: README.md  SCORES.md  pyproject.toml
schemas/: parquet_schemas.py
src/squiggle_core/: __init__.py  paths.py
src/squiggle_core/geometry/: __init__.py  state.py
src/squiggle_core/llm/: __init__.py  client.py  context.py
src/squiggle_core/schemas/: __init__.py  experiment.py  parquet_schemas.py  probe_summar.py  probe_tables.py
src/squiggle_core/scoring/: SCORING.md  baselines.py  squiggle_scoring.py
